--- a/src/index.scss
+++ b/src/index.scss
@@ -7,3 +7,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+main {
+  margin: 24px
+}
+
+.loader {
+  position: absolute;
+  left: calc(50% - 20px);
+  top: calc(50% - 20px);
+}
